# perfect-decision-trees

./: LICENSE  README.md  pyproject.toml
perfectdt/: model.py  python_expressions.py  vectoriser.py
tests/: test_basic_usage.py
