[tool.poetry]
name = "perfectdt"
version = "0.1.0"
description = ""
authors = ["Will Mischlewski <developerwill1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pulp = "^2.8.0"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
